# dotfiles

./: .gitignore  .hidden  gitconfig  init-nix-flake.sh  install-nix-darwin.sh  link.sh  tmux.conf  xmobarrc  zprofile  zshrc
.config/: compton.conf  mimeapps.list
.config/X11/: Xmodmap  Xresources  extend.Xresources  xinitrc
.config/alacritty/: alacritty.yml
.config/bspwm/: bspwmrc  keyboard.sh  monitor.sh  node_defaults.sh
.config/dunst/: dunstrc
.config/elinks/: cookies  elinks.conf  globhist  gotohist  searchhist
config/nvim/tree-sitter-minilang/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
config/nvim/tree-sitter-minilang/bindings/c/: tree-sitter-minilang.pc.in
config/nvim/tree-sitter-minilang/bindings/go/: binding.go  binding_test.go
config/nvim/tree-sitter-minilang/bindings/node/: binding.cc  index.js
config/nvim/tree-sitter-minilang/bindings/python/tests/: test_binding.py
config/nvim/tree-sitter-minilang/bindings/python/tree_sitter_minilang/: __init__.py  binding.c
config/nvim/tree-sitter-minilang/bindings/rust/: build.rs  lib.rs
config/nvim/tree-sitter-minilang/bindings/swift/TreeSitterMinilang/: minilang.h
config/nvim/tree-sitter-minilang/bindings/swift/TreeSitterMinilangTests/: TreeSitterMinilangTests.swift
config/nvim/tree-sitter-minilang/src/: grammar.json
karabiner-config/: build.sh  package-lock.json  package.json  readme.md
nixos-config/: build.sh  flake.nix  todo.txt
nixpkgs/: darwin-configuration.nix  git.nix  nvim.nix  zsh-macos.nix  zsh.nix
nvchad/: README.md  chadrc.lua  highlights.lua  init.lua  mappings.lua  plugins.lua
xmonad/: xmonad.hs
(+185 files in other folders)
